[gd_scene load_steps=10 format=2]

[ext_resource path="res://wall/Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://paddle/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://paddle/paddle_05.png" type="Texture" id=3]
[ext_resource path="res://ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://score/ScoreManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/Kenney Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Level.gd" type="Script" id=7]
[ext_resource path="res://sounds/gameover.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[node name="Level" type="Node"]
pause_mode = 2
script = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallTop" parent="." instance=ExtResource( 1 )]
pause_mode = 1

[node name="WallBottom" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 0, 715 )

[node name="Paddle1" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 70, 360 )
scale = Vector2( 0.2, 0.2 )

[node name="Paddle2" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 1210, 360 )
scale = Vector2( 0.2, 0.2 )
player_no = 2

[node name="Sprite" parent="Paddle2" index="0"]
texture = ExtResource( 3 )

[node name="Ball" parent="." groups=[
"ball",
] instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 640, 360 )
scale = Vector2( 0.2, 0.2 )

[node name="PlayLabel" type="Label" parent="."]
margin_left = 482.0
margin_top = 205.0
margin_right = 800.0
margin_bottom = 315.0
custom_fonts/font = SubResource( 2 )
text = "Press SPACE to play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ScoreManager" parent="." instance=ExtResource( 5 )]
[connection signal="game_over" from="ScoreManager" to="." method="_on_game_over"]

[editable path="Paddle2"]
